test/classes/initializers/phase1/use-before-square.good
use-before-square.chpl:13: In initializer:
use-before-square.chpl:14: error: Field used before it is initialized
